--- a/apps/metricreader.html
+++ b/apps/metricreader.html
@@ -268,7 +268,7 @@
                 let prefix = ""; 
                 
                 if (record['Half-line'] === 2 && !halfLineMarkerAdded) {
-                    prefix += `<span class="half-line-marker">∥</span> `; 
+                    prefix += `<span class="half-line-marker">‖</span> `; 
                     halfLineMarkerAdded = true;
                 }
 
